draft one for card.io hw

--- a/cardio/index.html
+++ b/cardio/index.html
@@ -6,6 +6,9 @@
   <script type="text/javascript" src="contour.js"></script>
 </head>
 <body>
-
+  <div>
+    <h1>THUNDERDOME</h1>
+    <canvas id="canvas"></canvas>
+  </div>
 </body>
 </html>
