--- a/cardio/index.html
+++ b/cardio/index.html
@@ -2,13 +2,30 @@
 <html>
 <head>
   <title>Contour Lines!</title>
-  <link rel="stylesheet" type="text/css" href="contour.css" />
+  <style>
+    * {margin: 0; padding: 0;}
+    html, body { width: 100%; height: 100%; }
+    div {height: 100%; width: 600px; margin: 0 auto;
+      background: #f5f5f5;
+      padding: 0 15px;
+      border-left: 1px solid #666;
+      border-right: 1px solid #666;
+      text-align: center;
+    }
+    #canvas {
+      border: 1px solid #666;
+      width: 500px;
+      height: 350px;
+      margin: 20px auto;
+      background: #fff;
+    }
+  </style>
   <script type="text/javascript" src="contour.js"></script>
 </head>
 <body>
   <div>
-    <h1>THUNDERDOME</h1>
-    <canvas id="canvas"></canvas>
+    <h1>FOLLOWING CODE THOUROUGHLY STOLEN FROM WIKIPEDIA</h1>
+    <canvas id="canvas" width="500" height="350"></canvas>
   </div>
 </body>
 </html>
