--- a/cardio/index.html
+++ b/cardio/index.html
@@ -4,28 +4,62 @@
   <title>Contour Lines!</title>
   <style>
     * {margin: 0; padding: 0;}
-    html, body { width: 100%; height: 100%; }
-    div {height: 100%; width: 600px; margin: 0 auto;
+    html, body { width: 100%; height: 100%; overflow: hidden; }
+    p {margin: 1em 0;}
+    #col {height: 100%; width: 600px; margin: 0 auto;
       background: #f5f5f5;
-      padding: 0 15px;
-      border-left: 1px solid #666;
-      border-right: 1px solid #666;
-      text-align: center;
+      border-left: 1px solid #999;
+      width: 250px;
+      position: absolute;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      height: 100%;
+      overflow: hidden;
+    }
+    #spacer {
+      margin: 25px 15px;
+    }
+    #canvaswrap {
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 251px;
+      height: 100%;
+      overflow: hidden;
+    }
+    #canvaswrap2 {
+      margin: 15px;
     }
     #canvas {
-      border: 1px solid #666;
-      width: 500px;
-      height: 350px;
-      margin: 20px auto;
-      background: #fff;
+      width: 100%;
+      height: 100%;
+    }
+    #interval {
+      width: 30px;
+      height: 1.5em;
     }
   </style>
   <script type="text/javascript" src="contour.js"></script>
 </head>
 <body>
-  <div>
-    <h1>FOLLOWING CODE THOUROUGHLY STOLEN FROM WIKIPEDIA</h1>
-    <canvas id="canvas" width="500" height="350"></canvas>
+  <div id="col">
+    <div id="spacer">
+      <p>
+        Drag a .tsv topography file onto the window to see a map for it, or hit
+        one of the buttons below to use a sample file.
+      </p>
+      <p>
+        <label for="interval">Isoline interval:</label>
+        <input type="text" id="interval" value="15" />
+      </p>
+    </div>
+  </div>
+  <div id="canvaswrap">
+    <div id="canvaswrap2">
+      <canvas id="canvas"></canvas>
+    </div>
   </div>
 </body>
 </html>
