--- a/cardio/index.html
+++ b/cardio/index.html
@@ -29,12 +29,12 @@
       height: 100%;
       overflow: hidden;
     }
-    #canvaswrap2 {
-      margin: 15px;
-    }
     #canvas {
-      width: 100%;
-      height: 100%;
+      width: 95%;
+      height: 95%;
+      position: absolute;
+      top: 2.5%;
+      left: 2.5%;
     }
     #interval {
       width: 30px;
@@ -67,9 +67,7 @@
     </div>
   </div>
   <div id="canvaswrap">
-    <div id="canvaswrap2">
-      <canvas id="canvas"></canvas>
-    </div>
+    <canvas id="canvas"></canvas>
   </div>
 </body>
 </html>
