--- a/cardio/index.html
+++ b/cardio/index.html
@@ -4,8 +4,11 @@
   <title>Contour Lines!</title>
   <style>
     * {margin: 0; padding: 0;}
-    html, body { width: 100%; height: 100%; overflow: hidden; }
-    p {margin: 1em 0;}
+    html, body {
+      width: 100%; height: 100%; overflow: hidden;
+      font: 15px/1.5em 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    }
+    p, ul {margin: 1em 0;}
     #col {height: 100%; width: 600px; margin: 0 auto;
       background: #f5f5f5;
       border-left: 1px solid #999;
@@ -15,7 +18,7 @@
       top: 0;
       bottom: 0;
       height: 100%;
-      overflow: hidden;
+      overflow: auto;
     }
     #spacer {
       margin: 25px 15px;
@@ -51,6 +54,7 @@
 <body>
   <div id="col">
     <div id="spacer">
+      <h1>Usage</h1>
       <p>
         Drag a .tsv topography file onto the window to see a map for it, or hit
         one of the links below to use a sample file.
@@ -64,6 +68,16 @@
       </p>
       <p id="samples">
       </p>
+      <p>
+        Red indicates higher elevation iso-lines; green, lower
+      </p>
+      <h1>Pitfalls</h1>
+      <ul>
+        <li>Chrome/FF only</li>
+        <li>Browser security doesn't let you use the File API when running off of disk, need to run a webserver to echo the files back to you</li>
+        <li>I think my saddle-point resolution is off, would need more time to tinker</li>
+        <li>In fact, my next step would probably be to scrap marching-squares entirely and go for some line-division or bezier interpolation for a better-looking map</li>
+      </ul>
     </div>
   </div>
   <div id="canvaswrap">
